--- a/Project-part-1.ipynb
+++ b/Project-part-1.ipynb
@@ -104,7 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pass"
+    "l = 0.5  # seat frame length in meters
+r = 0.125  # wheel radius in meters"
    ]
   },
   {
