--- a/Project_part_2.ipynb
+++ b/Project_part_2.ipynb
@@ -825,7 +825,30 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "From the provided information, we understand that the equilibrium state of the scooter $ X_e = (x_e, y_e, \\theta_e)$ = (0, 0, 0) $ requires that both the derivatives of the position and orientation remain zero. The inputs $ \\omega_l $ and $ \\omega_r $ are such that they are equal to keep the orientation $ \\theta $ unchanged. Thus, at equilibrium, $\\omega_l = \\omega_r = 0 $.\n",
+        "\n",
+        "To demonstrate that any other constant choice of $ \\omega_e $, where $ \\omega_e \\neq 0 $, would result in a non-equilibrium condition:\n",
+        "\n",
+        "1. **Position Equilibrium**: For $ X_e $, the position $ (x_e, y_e) $ must remain unchanged, which implies $ \\dot{x} = \\dot{y} = 0 $. From the kinematic equations:\n",
+        "   $\n",
+        "   \\dot{x} = r \\cos(\\theta) \\cdot \\frac{\\omega_l + \\omega_r}{2}\n",
+        "   $\n",
+        "\n",
+        "   $\n",
+        "   \\dot{y} = r \\sin(\\theta) \\cdot \\frac{\\omega_l + \\omega_r}{2}\n",
+        "   $\n",
+        "   If $ \\omega_l \\neq \\omega_r $ or $ \\omega_l, \\omega_r \\neq 0 $, then either $\\dot{x} $ or $ \\dot{y} $ would be non-zero, as $ \\omega_l + \\omega_r \\neq 0 $ would result in non-zero velocities. Hence, the scooter would move either in the x or y direction, disrupting the equilibrium.\n",
+        "\n",
+        "2. **Orientation Equilibrium**: To maintain a constant orientation $ \\theta $, the derivative $ \\dot{\\theta} $ must also be zero. From the kinematic equation for orientation:\n",
+        "   $\n",
+        "   \\dot{\\theta} = \\frac{r}{\\ell} \\cdot (\\omega_r - \\omega_l)\n",
+        "   $\n",
+        "\n",
+        "   For $ \\dot{\\theta} = 0 $, it is necessary that $ \\omega_r = \\omega_l $. Any difference between $ \\omega_r $ and $\\omega_l$  would result in a non-zero  $\\dot{\\theta} $, leading to a change in orientation, again disrupting the equilibrium.\n",
+        "\n",
+        "Therefore, any choice of $\\omega_e $ where $ \\omega_l \\neq \\omega_r $ or $ \\omega_l, \\omega_r \\neq 0 $ does not satisfy the equilibrium conditions because it would result in either movement or change in orientation. The only viable constant inputs that maintain equilibrium are $ \\omega_l = \\omega_r = 0 $."
+      ],
       "metadata": {
         "id": "2vnaotqDoZC-"
       }
