working on linearized equations

--- a/Project_part_2.ipynb
+++ b/Project_part_2.ipynb
@@ -808,7 +808,7 @@
         "   At $ X_e $, we have $ x_e = 0 $ and $ y_e = 0 $. This implies that for the position to remain at zero velocity, both $\\omega_{e_l} $ and $ \\omega_{e_r} $ must be zero because any non-zero velocity would cause the position to change.\n",
         "\n",
         "2. *Orientation Equilibrium:*\n",
-        "   For the orientation $ \\theta $ to remain constant (zero angular velocity), we must have $ \\omega_{e_r} = \\omega_{e_l} $. This is because the difference \\( \\omega_{e_r} - \\omega_{e_l} \\) appears in the expression for $ \\theta'$, and for $ \\theta' $ to be zero, this difference must be zero.\n",
+        "   For the orientation $ \\theta $ to remain constant (zero angular velocity), we must have $ \\omega_{e_r} = \\omega_{e_l} $. This is because the difference $ \\omega_{e_r} - \\omega_{e_l} $ appears in the expression for $ \\theta'$, and for $ \\theta' $ to be zero, this difference must be zero.\n",
         "\n",
         "Therefore, the suitable constant choice for the equilibrium input $ \\omega_e $ is $ \\omega_{e_l} = \\omega_{e_r} = 0$. With this choice, the scooter will stay at the equilibrium state $ X_e = (0, 0, 0) $ because both the position and orientation will not change with time.\n"
       ]
@@ -826,10 +826,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "From the provided information, we understand that the equilibrium state of the scooter $ X_e = (x_e, y_e, \\theta_e)$ = (0, 0, 0) $ requires that both the derivatives of the position and orientation remain zero. The inputs $ \\omega_l $ and $ \\omega_r $ are such that they are equal to keep the orientation $ \\theta $ unchanged. Thus, at equilibrium, $\\omega_l = \\omega_r = 0 $.\n",
-        "\n",
-        "To demonstrate that any other constant choice of $ \\omega_e $, where $ \\omega_e \\neq 0 $, would result in a non-equilibrium condition:\n",
-        "\n",
         "1. **Position Equilibrium**: For $ X_e $, the position $ (x_e, y_e) $ must remain unchanged, which implies $ \\dot{x} = \\dot{y} = 0 $. From the kinematic equations:\n",
         "   $\n",
         "   \\dot{x} = r \\cos(\\theta) \\cdot \\frac{\\omega_l + \\omega_r}{2}\n",
@@ -856,13 +852,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "kE3i8gHSfuwL"
-      },
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "tags": [],
         "id": "OXwghdW-fuwM"
       },
@@ -876,7 +865,27 @@
         "id": "ausarYy3fuwM"
       },
       "source": [
-        "**TODO**"
+        "When considering the system with \\( \\omega_e = 0 \\), where both \\( \\omega_l \\) and \\( \\omega_r \\) are set to zero, the scooter's behavior simplifies to a stationary state, in fact :\n",
+        "\n",
+        "### Kinematic Model Review\n",
+        "The scooter's kinematic equations are:\n",
+        "- $ \\dot{x} = r \\cos(\\theta) \\cdot \\frac{\\omega_l + \\omega_r}{2} $\n",
+        "\n",
+        "- $ \\dot{y} = r \\sin(\\theta) \\cdot \\frac{\\omega_l + \\omega_r}{2} $\n",
+        "- $ \\dot{\\theta} = \\frac{r}{\\ell} \\cdot (\\omega_r - \\omega_l) $\n",
+        "\n",
+        "### Equilibria Conditions with \\$\\omega_e = 0 $:\n",
+        "\n",
+        "1. For Position $ (x, y) $ :\n",
+        "   - $ \\dot{x} = \\dot{y} = 0 $ since $ \\omega_l = \\omega_r = 0 $. This results in no movement in either the $ x $ or $ y $ direction, meaning the scooter remains stationary.\n",
+        "\n",
+        "2. For Orientation $ \\theta $:\n",
+        "   - $ \\dot{\\theta} = 0 $ also holds, as there is no difference between the left and right wheel speeds. The orientation $ \\theta $ does not change over time and remains constant at its initial value.\n",
+        "\n",
+        "### Conclusion on Equilibria\n",
+        "- The system remains in a complete state of equilibrium with respect to both position and orientation. The position $(x, y)$ remains fixed at its initial values, and the orientation $\\theta $ remains constant.\n",
+        "\n",
+        "Any position within this state can be considered an equilibrium point."
       ]
     },
     {
