linearized system done

--- a/Project_part_2.ipynb
+++ b/Project_part_2.ipynb
@@ -916,7 +916,41 @@
         "id": "9gBd3BPZfuwO"
       },
       "source": [
-        "**TODO**"
+        "The kinematic model is defined by:\n",
+        "\n",
+        "$ \\dot{x} = r \\cos(\\theta) \\cdot \\frac{\\omega_l + \\omega_r}{2} $\n",
+        "\n",
+        "$  \\dot{y} = r \\sin(\\theta) \\cdot \\frac{\\omega_l + \\omega_r}{2} $\n",
+        "\n",
+        "$  \\dot{\\theta} = \\frac{r}{\\ell} \\cdot (\\omega_r - \\omega_l) $\n",
+        "\n",
+        "### Linearizing the Model\n",
+        "To linearize the model at $ \\theta = 0 $ and $ \\omega_l = \\omega_r = 0 $, we can approximate:\n",
+        "- $ cos(\\theta) \\approx 1 $ and $ \\sin(\\theta) \\approx \\theta$\n",
+        "\n",
+        "Thus, the linearized model becomes:\n",
+        "\n",
+        "$ \\Delta \\dot{x} \\approx r \\cdot \\frac{\\Delta \\omega_l + \\Delta \\omega_r}{2} $\n",
+        "\n",
+        "$ \\Delta \\dot{y} \\approx r \\cdot \\frac{\\Delta \\omega_l + \\Delta \\omega_r}{2} \\cdot \\Delta \\theta $\n",
+        "\n",
+        "$ \\Delta \\dot{\\theta} \\approx \\frac{r}{\\ell} \\cdot (\\Delta \\omega_r - \\Delta \\omega_l) $\n",
+        "\n",
+        "### Standard Form\n",
+        "In the standard state-space form \\( \\dot{x} = Ax + Bu \\), let:\n",
+        "$ x = \\begin{bmatrix} \\Delta x \\\\ \\Delta y \\\\ \\Delta \\theta \\end{bmatrix} $\n",
+        "$ u = \\begin{bmatrix} \\Delta \\omega_l \\\\ \\Delta \\omega_r \\end{bmatrix} $\n",
+        "\n",
+        "The derivatives become:\n",
+        "$\\dot{x} = A x + B u $\n",
+        "\n",
+        "Where:\n",
+        "$ A $ is the matrix of coefficients for the state variables (since the equilibrium is constant, $A$ will be a zero matrix because no state contributes to the rate of change of any other state in the linearized form).\n",
+        "$ B $ is the matrix of coefficients for the input variables.\n",
+        "\n",
+        "$A = \\begin{bmatrix} 0 & 0 & 0 \\\\ 0 & 0 & 0 \\\\ 0 & 0 & 0 \\end{bmatrix} $\n",
+        "\n",
+        "$B = \\begin{bmatrix} \\frac{r}{2} & \\frac{r}{2} \\\\ 0 & 0 \\\\ \\frac{-r}{\\ell} & \\frac{r}{\\ell} \\end{bmatrix} $\n"
       ]
     },
     {
@@ -942,20 +976,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5ur0Bd9LfuwP"
-      },
-      "source": [
-        "**TODO**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "tags": [],
         "id": "3WTuI-ISfuwQ"
       },
       "source": [
-        "##### 🧩 Is the original system asymptotically stable ? Or even (locally) attractive ?"
+        "Stability Criteria:\n",
+        "\n",
+        "A linear system described by the differential equation\n",
+        "x˙=Ax is asymptotically stable if all the eigenvalues of the matrix A have strictly negative real parts. This implies that any perturbations from the equilibrium state will exponentially decay back to the equilibrium.\n",
+        "\n",
+        "The eigenvalues of this matrix A are all zero, since it is a zero matrix.\n",
+        "For the linearized model of the scooter whenΔω=(0,0), the conclusion is that the system is not stable. It will not return to the equilibrium state on its own if perturbed"
       ]
     },
     {
