working on Controllability of the linearized system

--- a/Project_part_2.ipynb
+++ b/Project_part_2.ipynb
@@ -991,11 +991,27 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "🧩 Is the original system asymptotically stable ? Or even (locally) attractive ?"
+      ],
+      "metadata": {
+        "id": "liyWEd1D2ma6"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "RVRqoB3SfuwQ"
       },
       "source": [
-        "**TODO**"
+        "### Analyzing the Non-linear System\n",
+        "- **Equilibrium Points**: For $ \\dot{x} = \\dot{y} = \\dot{\\theta} = 0 $, one equilibrium condition is when $ \\omega_l = \\omega_r = 0 $. In this case, the vehicle does not move, and there is no rotational movement.\n",
+        "\n",
+        "- **Behavior Under Perturbations**:\n",
+        "  - If perturbed from this state , the system dynamics indicate that the vehicle will start to move or rotate depending on the values of $ \\omega_l $ and $ \\omega_r $. The new movement will continue as long as the wheel speeds are maintained, indicating that the system might not return to the original state on its own. This implies the system is not asymptotically stable.\n",
+        "\n",
+        "### Conclusion\n",
+        "The original non-linear system is not asymptotically stable as it does not naturally return to an equilibrium state after being disturbed. It is not locally attractive under general conditions since small disturbances in the wheel speeds lead to new steady states of continuous motion or rotation rather than decaying back to a stop.\n"
       ]
     },
     {
@@ -1005,7 +1021,10 @@
         "id": "cTrYvYhOfuwR"
       },
       "source": [
-        "### Controllability of the linearized system"
+        "### Controllability of the linearized system\n",
+        "\n",
+        "> Ajouter une citation\n",
+        "\n"
       ]
     },
     {
