working on warnings

--- a/Project_part_2.ipynb
+++ b/Project_part_2.ipynb
@@ -1011,7 +1011,7 @@
         "  - If perturbed from this state , the system dynamics indicate that the vehicle will start to move or rotate depending on the values of $ \\omega_l $ and $ \\omega_r $. The new movement will continue as long as the wheel speeds are maintained, indicating that the system might not return to the original state on its own. This implies the system is not asymptotically stable.\n",
         "\n",
         "### Conclusion\n",
-        "The original non-linear system is not asymptotically stable as it does not naturally return to an equilibrium state after being disturbed. It is not locally attractive under general conditions since small disturbances in the wheel speeds lead to new steady states of continuous motion or rotation rather than decaying back to a stop.\n"
+        "The original non-linear system is not asymptotically stable as it does not naturally return to an equilibrium state after being disturbed. It is not locally attractive since small disturbances in the wheel speeds lead to new steady states of continuous motion or rotation rather than decaying back to a stop.\n"
       ]
     },
     {
@@ -1022,8 +1022,6 @@
       },
       "source": [
         "### Controllability of the linearized system\n",
-        "\n",
-        "> Ajouter une citation\n",
         "\n"
       ]
     },
@@ -1048,7 +1046,9 @@
         "id": "Z1A4OHoxfuwS"
       },
       "source": [
-        "##### 🧩 Is there an admissible trajectory that start with the state $X_0=(-2,0,0)$ and ends at origin after some time?  "
+        "##### 🧩 Is there an admissible trajectory that start with the state $X_0=(-2,0,0)$ and ends at origin after some time?\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -1057,7 +1057,30 @@
         "id": "u4DwOuLefuwS"
       },
       "source": [
-        "**TODO**"
+        "\n",
+        "Given $A $ is a zero matrix, the system's dynamics do not depend on the state itself but only on the control inputs through $ B $.the state evolution can be described purely by the input-response, i.e., the solution of $ \\Delta \\dot{X} = B\\Delta u $ given by:\n",
+        "$ \\Delta X(t) = \\Delta X(0) + \\int_0^t B\\Delta u(\\tau) \\, d\\tau $\n",
+        "\n",
+        "### Starting\n",
+        "- We start at $\\Delta X(0) = (-2, 0, 0) $\n",
+        "- To reach the origin at some time $ T $, we require:\n",
+        "$ \\Delta X(T) = \\Delta X(0) + \\int_0^T B\\Delta u(\\tau) \\, d\\tau = 0 $\n",
+        "- Specifically:\n",
+        "$ -2 + \\int_0^T \\frac{r}{2}(\\Delta \\omega_l(\\tau) + \\Delta \\omega_r(\\tau)) \\, d\\tau = 0 $\n",
+        "$ 0 + \\int_0^T 0 \\, d\\tau = 0 $\n",
+        "$ 0 + \\int_0^T \\frac{r}{\\ell}(\\Delta \\omega_r(\\tau) - \\Delta \\omega_l(\\tau)) \\, d\\tau = 0 $\n",
+        "\n",
+        "### Control Inputs\n",
+        "- To zero out the $x$-component, set:\n",
+        "$ \\int_0^T \\frac{r}{2}(\\Delta \\omega_l(\\tau) + \\Delta \\omega_r(\\tau)) \\, d\\tau = 2 $\n",
+        "- The $y$-component remains zero and does not affect controllability since $ B$ does not allow control over $ y$\n",
+        "- The $\\theta$-component's integral being zero is satisfied if $\\Delta \\omega_l $ and $ \\Delta \\omega_r $ are selected such that their differential integrated over time nets to zero, i.e., their time-averaged values are equal.\n",
+        "\n",
+        "### Feasibility\n",
+        "By selecting $ \\Delta \\omega_l $ and $ \\Delta \\omega_r $ appropriately, the $ x$-component can be driven to zero, and the $\\theta$-component can be maintained at zero. For example, if you use control inputs that symmetrically increase and then decrease, such as triangular pulses or other symmetric patterns that integrate to the necessary values over the interval $[0, T]$, you can meet these conditions.\n",
+        "\n",
+        "### Conclusion\n",
+        "Yes, there is an admissible trajectory from \\( (-2, 0, 0) \\) to the origin."
       ]
     },
     {
