solved (hopefully) warnings

--- a/Project_part_2.ipynb
+++ b/Project_part_2.ipynb
@@ -802,15 +802,19 @@
         "id": "ZNmo-nZJfuwL"
       },
       "source": [
-        "consider the equilibrium state $ X_e = (0, 0, 0) $. We need to find a suitable choice of $ \\omega_e = \\omega_{e_l}, \\omega_{e_r}$ such that the derivative of the state is zero at this equilibrium point.\n",
+        "If we assume $\\omega_e = 0$, the kinematic model for the position $X_e = (0, 0, 0)$ reduces to:\n",
         "\n",
-        "1. *Position Equilibrium:*\n",
-        "   At $ X_e $, we have $ x_e = 0 $ and $ y_e = 0 $. This implies that for the position to remain at zero velocity, both $\\omega_{e_l} $ and $ \\omega_{e_r} $ must be zero because any non-zero velocity would cause the position to change.\n",
         "\n",
-        "2. *Orientation Equilibrium:*\n",
-        "   For the orientation $ \\theta $ to remain constant (zero angular velocity), we must have $ \\omega_{e_r} = \\omega_{e_l} $. This is because the difference $ \\omega_{e_r} - \\omega_{e_l} $ appears in the expression for $ \\theta'$, and for $ \\theta' $ to be zero, this difference must be zero.\n",
         "\n",
-        "Therefore, the suitable constant choice for the equilibrium input $ \\omega_e $ is $ \\omega_{e_l} = \\omega_{e_r} = 0$. With this choice, the scooter will stay at the equilibrium state $ X_e = (0, 0, 0) $ because both the position and orientation will not change with time.\n"
+        "$\\dot{x}_e  = 0 $\n",
+        "\n",
+        "$\\dot{y}_e  = 0 $\n",
+        "\n",
+        "$\\dot{\\theta}_e  = 0$\n",
+        "\n",
+        "\n",
+        "\n",
+        "This implies that when \\(X_e = (x_e, y_e, \\theta_e) = (0, 0, 0)\\), the system is in a state of equilibrium."
       ]
     },
     {
@@ -826,24 +830,41 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. **Position Equilibrium**: For $ X_e $, the position $ (x_e, y_e) $ must remain unchanged, which implies $ \\dot{x} = \\dot{y} = 0 $. From the kinematic equations:\n",
-        "   $\n",
-        "   \\dot{x} = r \\cos(\\theta) \\cdot \\frac{\\omega_l + \\omega_r}{2}\n",
-        "   $\n",
+        "here is a simpler version of our last answer :\n",
         "\n",
-        "   $\n",
-        "   \\dot{y} = r \\sin(\\theta) \\cdot \\frac{\\omega_l + \\omega_r}{2}\n",
-        "   $\n",
-        "   If $ \\omega_l \\neq \\omega_r $ or $ \\omega_l, \\omega_r \\neq 0 $, then either $\\dot{x} $ or $ \\dot{y} $ would be non-zero, as $ \\omega_l + \\omega_r \\neq 0 $ would result in non-zero velocities. Hence, the scooter would move either in the x or y direction, disrupting the equilibrium.\n",
+        "Case 1: $\\omega_r = \\omega_l$\n",
         "\n",
-        "2. **Orientation Equilibrium**: To maintain a constant orientation $ \\theta $, the derivative $ \\dot{\\theta} $ must also be zero. From the kinematic equation for orientation:\n",
-        "   $\n",
-        "   \\dot{\\theta} = \\frac{r}{\\ell} \\cdot (\\omega_r - \\omega_l)\n",
-        "   $\n",
+        "In this case, we have:\n",
         "\n",
-        "   For $ \\dot{\\theta} = 0 $, it is necessary that $ \\omega_r = \\omega_l $. Any difference between $ \\omega_r $ and $\\omega_l$  would result in a non-zero  $\\dot{\\theta} $, leading to a change in orientation, again disrupting the equilibrium.\n",
+        "$\n",
         "\n",
-        "Therefore, any choice of $\\omega_e $ where $ \\omega_l \\neq \\omega_r $ or $ \\omega_l, \\omega_r \\neq 0 $ does not satisfy the equilibrium conditions because it would result in either movement or change in orientation. The only viable constant inputs that maintain equilibrium are $ \\omega_l = \\omega_r = 0 $."
+        "$\\dot{x}  = r \\cdot \\omega_l \\cdot \\cos(\\theta) $\n",
+        "\n",
+        "$\\dot{y}  = r \\cdot \\omega_l \\cdot \\sin(\\theta) $\n",
+        "\n",
+        "$\\dot{\\theta}  = 0 $\n",
+        "\n",
+        "$\n",
+        "\n",
+        "Since $\\omega_l$ $\\neq 0$, it follows that $\\dot{x} $\\neq 0\\$ and $\\dot{y} \\neq 0$. Therefore, there is no equilibrium .\n",
+        "\n",
+        "Case 2: $\\omega_r \\neq \\omega_l$\n",
+        "\n",
+        "Assuming there is an equilibrium at a state $X_s$, where $\\dot{x}_s = 0$, $\\dot{y}_s = 0$, and $\\dot{\\theta}_s = 0$, it means:\n",
+        "\n",
+        "\n",
+        "$ \\frac{\\omega_r + \\omega_l}{2} \\cos(\\theta_s)  = 0 $\n",
+        "\n",
+        "$ \\frac{\\omega_r + \\omega_l}{2} \\sin(\\theta_s)  = 0 $\n",
+        "\n",
+        "$\\frac{\\omega_r - \\omega_l}{\\ell}  = 0 $\n",
+        "\n",
+        "\n",
+        "Given that $\\omega_l \\neq 0$ and $\\omega \\neq 0$, $\\cos(\\theta_s) = 0$ and $\\sin \\theta_s = 0$ is contradictory.\n",
+        "\n",
+        "**Conclusion:**\n",
+        "\n",
+        "There is no equilibrium for any other $\\omega_e\\$"
       ],
       "metadata": {
         "id": "2vnaotqDoZC-"
