--- a/Project_part_2.ipynb
+++ b/Project_part_2.ipynb
@@ -814,7 +814,7 @@
         "\n",
         "\n",
         "\n",
-        "This implies that when \\(X_e = (x_e, y_e, \\theta_e) = (0, 0, 0)\\), the system is in a state of equilibrium."
+        "This implies that when $X_e = (x_e, y_e, \\theta_e) = (0, 0, 0)$, the system is in a state of equilibrium."
       ]
     },
     {
@@ -846,7 +846,7 @@
         "\n",
         "$\n",
         "\n",
-        "Since $\\omega_l$ $\\neq 0$, it follows that $\\dot{x} $\\neq 0\\$ and $\\dot{y} \\neq 0$. Therefore, there is no equilibrium .\n",
+        "Since $\\omega_l$ $\\neq$ 0, it follows that $\\dot{x}$ $\\neq$ 0 and $\\dot{y} \\neq 0$. Therefore, there is no equilibrium .\n",
         "\n",
         "Case 2: $\\omega_r \\neq \\omega_l$\n",
         "\n",
@@ -1120,7 +1120,17 @@
         "id": "fgKGGjbefuwT"
       },
       "source": [
-        "**TODO**"
+        "1. **Control Matrix \\( B \\)**:\n",
+        "   - The matrix B shows that control inputs $\\Delta \\omega_l$ and $ \\Delta \\omega_r $ can only influence the $ x $ and $ \\theta $ (orientation) components of the state. The $y-component of the state does not receive any influence from the control inputs because the corresponding row in  B  is entirely zeros.\n",
+        "\n",
+        "2. Initial State $ X_0 = (0, 2, 0) $:\n",
+        "   The second component of this state vector, which represents the  y position, starts at 2.\n",
+        "\n",
+        "3. Lack of Control Over y :\n",
+        "   - Since  y  cannot be influenced or modified by the control inputs (as indicated by the zeros in the second row of  B ), there is no possible way to change  y  from 2 back to 0 using the control inputs available.\n",
+        "\n",
+        "### Conclusion:\n",
+        "Given that there is no influence on the  y-component from any control inputs, and the  y-component of the initial state $X_0$  is not zero, **there is no admissible trajectory** that can start from  (0, 2, 0) and reach the origin."
       ]
     },
     {
