--- a/Project_part_2.ipynb
+++ b/Project_part_2.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "# Self-Balancing Scooter Control\n",
         "\n",
-        "![](images/self-balancing-scooter.png)\n",
+        "![](https://github.com/ahmedelalaoui142/control-engineering-with-python-project-2023-2024/blob/master/images/self-balancing-scooter.png?raw=1)\n",
         "\n",
         "> A self-balancing scooter [...] is a self-balancing personal transporter consisting of two motorized wheels connected to a pair of articulated pads on which the rider places their feet. The rider controls the speed by leaning forward or backward, and direction of travel by twisting the pads.\n",
         ">\n",
@@ -1149,7 +1149,7 @@
         "id": "Schu2TS8fuwU"
       },
       "source": [
-        "**TODO**"
+        "The system is not controllable because we observed that certain points are not reachable with specific initial conditions like the example above."
       ]
     },
     {
@@ -1185,12 +1185,21 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "gx8Smu66fuwX"
-      },
       "source": [
-        "**TODO**"
-      ]
+        "When $y_R(t) = 0$, it implies that either $\\sin\\theta_R = 0$ or $(\\omega_l + \\omega_r)/2 = 0$. However, the second case leads to $\\dot{x} = 0$, which contradicts $\\dot{x}_R = v$. Therefore, $\\theta_R(t) = k\\pi$ as a result of this analysis.\n",
+        "\n",
+        "Continuity ensures that $\\theta$ cannot abruptly change from $k\\pi$ to $k'\\pi$, leading to multiple sets of solutions where $\\theta_R(t)$ remains constant at $k\\pi$. Consequently, $\\dot{\\theta} = 0$, and thus $\\omega_l(t) = \\omega_r(t) = \\omega(t)$.\n",
+        "\n",
+        "In conclusion, $\\dot{x} = R_w\\omega(t)\\cos(k\\pi)$.\n",
+        "\n",
+        "We have identified two valid sets of solutions, based on the parity:\n",
+        "\n",
+        "1. $X_R(t) = (vt, 0, 0)$ with a reference control $\\omega_R(t) = (v/R_w, v/R_w)$\n",
+        "2. $X_R(t) = (vt, 0, \\pi)$ with a reference control $\\omega_R(t) = (-v/R_w, -v/R_w)$\n"
+      ],
+      "metadata": {
+        "id": "OAo6IBMFdYx9"
+      }
     },
     {
       "cell_type": "markdown",
