--- a/Project_part_2.ipynb
+++ b/Project_part_2.ipynb
@@ -1235,7 +1235,26 @@
         "id": "OFziXdMWfuwY"
       },
       "source": [
-        "**TODO**"
+        "$\\Delta X(t) = X(t) - X_R(t) = (x(t)-vt, y(t), θ(t)) $ et\n",
+        "$\\Delta \\omega(t) = \\omega(t) - \\omega_R(t) =(\\omega_l(t)-v/r, \\omega_r(t) - v/r) $\n",
+        "$$\n",
+        "\\frac{\\Delta X}{dt} = A \\Delta X + B\\Delta u\n",
+        "$$\n",
+        "$$\n",
+        "  A = \\begin{bmatrix}\n",
+        "      0 & 0 & 0 \\\\\n",
+        "      0 & 0 & v \\\\\n",
+        "      0 & 0 & 0\n",
+        "  \\end{bmatrix}\n",
+        "$$\n",
+        "\n",
+        "and\n",
+        "\n",
+        "$$\n",
+        "   B=\\begin{bmatrix}\n",
+        "    \\frac r2 & \\frac r2  \\\\ 0 & 0 \\\\ -\\frac rl & \\frac rl\n",
+        "  \\end{bmatrix}\n",
+        "$$"
       ]
     },
     {
@@ -1254,7 +1273,7 @@
         "id": "WEnArIQXfuwa"
       },
       "source": [
-        "**TODO**"
+        "$A$ has 3 null eigenvalues, so the system is not asymptotically stable"
       ]
     },
     {
@@ -1273,7 +1292,8 @@
         "id": "i4ytZiiEfuwb"
       },
       "source": [
-        "**TODO**"
+        "- Fist of all, for linear systems, being locally attractive means the same as being globally asymptotically stable (GAS). The system isn't GAS.(from the lesson)\n",
+        "- And we have the error $\\Delta y$ stays the same without any adjustments to the input."
       ]
     },
     {
@@ -1292,7 +1312,18 @@
         "id": "Ft_nqZCufuwc"
       },
       "source": [
-        "**TODO**"
+        "Fist we have : $C = [B, AB]$ since $A^i=0$ for $i\\geq2$ .\n",
+        "\n",
+        "So :\n",
+        "$$C =\n",
+        "\\begin{bmatrix}\n",
+        "    \\frac r2 & \\frac r2 & 0 & 0 \\\\\n",
+        "    0 & 0 & -v \\frac rl & v \\frac rl \\\\\n",
+        "    -\\frac r2 & \\frac r2 & 0 & 0\n",
+        "\\end{bmatrix}\n",
+        "$$\n",
+        "\n",
+        "The submatrix defined by keeping the 3 first columns if full rank. So, the controllability matrix is also full rank and the system is controllable."
       ]
     },
     {
