--- a/Project_part_2.ipynb
+++ b/Project_part_2.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Msy4xcKgfuvx"
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "Vqr5s73ofuv0"
       },
@@ -146,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "WpIlfixYfuv1"
       },
@@ -205,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "_s_J2Rfsfuv3"
       },
@@ -225,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -339,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "m8LLW2xDfuv7"
       },
@@ -362,7 +362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "v5VV_Ovrfuv8"
       },
@@ -394,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "VM7_oeOtfuv8"
       },
@@ -415,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -464,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -523,7 +523,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -571,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -671,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "cn0UPJSWfuwG"
       },
@@ -701,7 +701,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "QBXY0-rIfuwH"
       },
@@ -739,7 +739,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1188,14 +1188,14 @@
       "source": [
         "When $y_R(t) = 0$, it implies that either $\\sin\\theta_R = 0$ or $(\\omega_l + \\omega_r)/2 = 0$. However, the second case leads to $\\dot{x} = 0$, which contradicts $\\dot{x}_R = v$. Therefore, $\\theta_R(t) = k\\pi$ as a result of this analysis.\n",
         "\n",
-        "Continuity ensures that $\\theta$ cannot abruptly change from $k\\pi$ to $k'\\pi$, leading to multiple sets of solutions where $\\theta_R(t)$ remains constant at $k\\pi$. Consequently, $\\dot{\\theta} = 0$, and thus $\\omega_l(t) = \\omega_r(t) = \\omega(t)$.\n",
+        "Continuity ensures that $\\theta$ cannot abruptly change from $k\\pi$ to $k'\\pi$ (k being an integer), leading to multiple sets of solutions where $\\theta_R(t)$ remains constant at $k\\pi$. Consequently, $\\dot{\\theta} = 0$, and thus $\\omega_l(t) = \\omega_r(t) = \\omega(t)$.\n",
         "\n",
-        "In conclusion, $\\dot{x} = R_w\\omega(t)\\cos(k\\pi)$.\n",
+        "In conclusion, $\\dot{x} = r\\omega(t)\\cos(k\\pi)$.\n",
         "\n",
         "We have identified two valid sets of solutions, based on the parity:\n",
         "\n",
-        "1. $X_R(t) = (vt, 0, 0)$ with a reference control $\\omega_R(t) = (v/R_w, v/R_w)$\n",
-        "2. $X_R(t) = (vt, 0, \\pi)$ with a reference control $\\omega_R(t) = (-v/R_w, -v/R_w)$\n"
+        "1. $X_R(t) = (vt, 0, 0)$ with a reference control $\\omega_R(t) = (v/r, v/r)$\n",
+        "2. $X_R(t) = (vt, 0, \\pi)$ with a reference control $\\omega_R(t) = (-v/r, -v/r)$\n"
       ],
       "metadata": {
         "id": "OAo6IBMFdYx9"
@@ -1355,7 +1355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "T_DfMMYbfuwe",
         "colab": {
@@ -1415,7 +1415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "gdvR3gbVfuwf"
       },
@@ -1436,7 +1436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "QMqB4qcLfuwg"
       },
@@ -1478,7 +1478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "3ZwsO_TPfuwh",
         "colab": {
@@ -1525,7 +1525,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "9cNuSm0Bfuwi"
       },
@@ -1548,7 +1548,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "5WyFn__jfuwi",
         "colab": {
@@ -1622,7 +1622,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "gA_5QeSZfuwk"
       },
@@ -1642,7 +1642,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "9TkNuacpfuwl"
       },
@@ -1690,7 +1690,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "kjUbO6g4fuwm"
       },
@@ -1710,7 +1710,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "DMYkDh3_fuwn"
       },
@@ -1730,7 +1730,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "K6Y5XLL8fuwo"
       },
