--- a/Project_part_3.ipynb
+++ b/Project_part_3.ipynb
@@ -2459,7 +2459,19 @@
         "id": "sVDGDh4nsqk4"
       },
       "source": [
-        "**TODO**"
+        "1. **X-coordinate Calculation**:\n",
+        "   - The x-coordinate of the marker, $x_m$, is found by taking the scooter's current x-coordinate and moving 0.5 meters in the direction of $\\theta$.\n",
+        "   - Mathematically, this is expressed as:\n",
+        "     $\n",
+        "     x_m = x + d \\cdot \\cos(\\theta)\n",
+        "     $\n",
+        "\n",
+        "2. **Y-coordinate Calculation**:\n",
+        "   - Similarly, the y-coordinate, $y_m$, is obtained by moving 0.5 meters in the perpendicular direction of $\\theta$, along the sine component.\n",
+        "   - This is given by:\n",
+        "     $\n",
+        "     y_m = y + d \\cdot \\sin(\\theta)\n",
+        "     $\n"
       ]
     },
     {
@@ -2468,7 +2480,7 @@
         "id": "9dgeo2X5sqk5"
       },
       "source": [
-        "🧩 Write the differential equation satisfied by $(x_m, y_m)$."
+        "\\🧩 Write the differential equation satisfied by $(x_m, y_m)$."
       ]
     },
     {
@@ -2477,7 +2489,50 @@
         "id": "3m3O9Bl5sqk5"
       },
       "source": [
-        "**TODO**"
+        "**Derivative of \\(x_m\\)**:\n",
+        "   $\n",
+        "   \\dot{x}_m = \\frac{d}{dt}(x + d \\cdot \\cos(\\theta))\n",
+        "   $\n",
+        "   Applying the derivative:\n",
+        "   $\n",
+        "   \\dot{x}_m = \\dot{x} - d \\cdot \\sin(\\theta) \\cdot \\dot{\\theta}\n",
+        "   $\n",
+        "\n",
+        "**Derivative of \\(y_m\\)**:\n",
+        "   $\n",
+        "   \\dot{y}_m = \\frac{d}{dt}(y + d \\cdot \\sin(\\theta))\n",
+        "   $\n",
+        "   Applying the derivative:\n",
+        "   $\n",
+        "   \\dot{y}_m = \\dot{y} + d \\cdot \\cos(\\theta) \\cdot \\dot{\\theta}\n",
+        "   $\n",
+        "\n",
+        "\n",
+        "Given the kinematics of a differential drive scooter:\n",
+        "$ \\dot{x} = r \\cos(\\theta) \\cdot \\frac{\\omega_l + \\omega_r}{2} $\n",
+        "$ \\dot{y} = r \\sin(\\theta) \\cdot \\frac{\\omega_l + \\omega_r}{2} $\n",
+        "$ \\dot{\\theta} = \\frac{r}{\\ell} (\\omega_r - \\omega_l) $\n",
+        "\n",
+        "Substituting these into $\\dot{x}_m$ and $\\dot{y}_m$\n",
+        "\n",
+        "   $\n",
+        "   \\dot{x}_m = r \\cos(\\theta) \\cdot \\frac{\\omega_l + \\omega_r}{2} - d \\cdot \\sin(\\theta) \\cdot \\frac{r}{\\ell} (\\omega_r - \\omega_l)\n",
+        "   $\n",
+        "\n",
+        "   $\n",
+        "   \\dot{y}_m = r \\sin(\\theta) \\cdot \\frac{\\omega_l + \\omega_r}{2} + d \\cdot \\cos(\\theta) \\cdot \\frac{r}{\\ell} (\\omega_r - \\omega_l)\n",
+        "   $\n",
+        "\n",
+        "\n",
+        "thus:\n",
+        "\n",
+        "$\n",
+        "\\dot{x}_m = r \\cos(\\theta) \\cdot \\frac{\\omega_l + \\omega_r}{2} - d \\cdot \\sin(\\theta) \\cdot \\frac{r}{\\ell} (\\omega_r - \\omega_l)\n",
+        "$\n",
+        "\n",
+        "$\n",
+        "\\dot{y}_m = r \\sin(\\theta) \\cdot \\frac{\\omega_l + \\omega_r}{2} + d \\cdot \\cos(\\theta) \\cdot \\frac{r}{\\ell} (\\omega_r - \\omega_l)\n",
+        "$"
       ]
     },
     {
@@ -2497,7 +2552,36 @@
         "id": "W0wwraEKsqk5"
       },
       "source": [
-        "**TODO**"
+        "### Reference Trajectory Requirements\n",
+        "For the marker to follow the reference trajectory \\( (x_{mf}(t), y_{mf}(t)) \\), it must satisfy:\n",
+        "$ \\dot{x}_m = \\dot{x}_{rm} $\n",
+        "$ \\dot{y}_m = \\dot{y}_{rm} $\n",
+        "\n",
+        "Given the scooter's kinematics:\n",
+        "\n",
+        "$ \\dot{x} = r \\cos(\\theta) \\frac{\\omega_l + \\omega_r}{2} $\n",
+        "\n",
+        "$ \\dot{y} = r \\sin(\\theta) \\frac{\\omega_l + \\omega_r}{2} $\n",
+        "\n",
+        "$ \\dot{\\theta} = \\frac{r}{\\ell} (\\omega_r - \\omega_l) $\n",
+        "\n",
+        "Substituting these into the marker velocity equations gives:\n",
+        "$ \\dot{x}_m = r \\cos(\\theta) \\frac{\\omega_l + \\omega_r}{2} - d \\sin(\\theta) \\frac{r}{\\ell} (\\omega_r - \\omega_l) $\n",
+        "\n",
+        "$ \\dot{y}_m = r \\sin(\\theta) \\frac{\\omega_l + \\omega_r}{2} + d \\cos(\\theta) \\frac{r}{\\ell} (\\omega_r - \\omega_l) $\n",
+        "\n",
+        "\n",
+        "By equating $\\dot{x}_m = \\dot{x}_{rm} $ and $ \\dot{y}_m = \\dot{y}_{rm} $, we derive the expressions for $ \\omega_l $ and $ \\omega_r $:\n",
+        "\n",
+        "Rearrange the equations to express $ \\omega_l $ and $ \\omega_r $ in terms of $ \\dot{x}_{rm} $ and $ \\dot{y}_{rm} $.\n",
+        "\n",
+        "Solving the system\n",
+        "  $ \\omega_l $ and $ \\omega_r $ as functions of $ x_{rm}(t), y_{rm}(t), \\dot{x}_{rm}(t), \\dot{y}_{rm}(t), $ and $ \\theta(t) $.\n",
+        "\n",
+        "$ \\omega_l = \\frac{\\ell}{r} \\left(\\frac{\\dot{x}_{rm} + d \\frac{\\dot{\\theta} \\sin(\\theta)}{r} - \\dot{y}_{rm} \\tan(\\theta)}{2 \\cos(\\theta)}\\right) - \\frac{\\dot{\\theta}}{2} $\n",
+        "\n",
+        "$ \\omega_r = \\frac{\\ell}{r} \\left(\\frac{\\dot{x}_{rm} + d \\frac{\\dot{\\theta} \\sin(\\theta)}{r} + \\dot{y}_{rm} \\tan(\\theta)}{2 \\cos(\\theta)}\\right) + \\frac{\\dot{\\theta}}{2} $\n",
+        "\n"
       ]
     },
     {
@@ -2518,14 +2602,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 481,
+      "execution_count": 485,
       "metadata": {
         "id": "vJ8mFSaSsqk5"
       },
       "outputs": [],
-      "source": [
-        "pass"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
