--- a/Project_part_3.ipynb
+++ b/Project_part_3.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "# Self-Balancing Scooter Control\n",
         "\n",
-        "![](images/self-balancing-scooter.png)\n",
+        "![](https://github.com/ahmedelalaoui142/control-engineering-with-python-project-2023-2024/blob/master/images/self-balancing-scooter.png?raw=1)\n",
         "\n",
         "> A self-balancing scooter [...] is a self-balancing personal transporter consisting of two motorized wheels connected to a pair of articulated pads on which the rider places their feet. The rider controls the speed by leaning forward or backward, and direction of travel by twisting the pads.\n",
         ">\n",
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 443,
+      "execution_count": null,
       "metadata": {
         "id": "0mPBnqPEsqkW"
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 444,
+      "execution_count": null,
       "metadata": {
         "id": "Bap0aP94sqkZ"
       },
@@ -146,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 445,
+      "execution_count": null,
       "metadata": {
         "id": "ENHRqhHKsqka"
       },
@@ -205,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 446,
+      "execution_count": null,
       "metadata": {
         "id": "LpNlfy-usqkb"
       },
@@ -225,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 447,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -339,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 448,
+      "execution_count": null,
       "metadata": {
         "id": "ux1H3cdfsqkd"
       },
@@ -362,7 +362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 449,
+      "execution_count": null,
       "metadata": {
         "id": "Ud0dsBGbsqke"
       },
@@ -394,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 450,
+      "execution_count": null,
       "metadata": {
         "id": "hHWVvCIksqke"
       },
@@ -415,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 451,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -464,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 452,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -523,7 +523,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 453,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -571,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 454,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -671,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 455,
+      "execution_count": null,
       "metadata": {
         "id": "2QaBSDqDsqkr"
       },
@@ -702,7 +702,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 456,
+      "execution_count": null,
       "metadata": {
         "id": "iT_633O6sqks"
       },
@@ -724,7 +724,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 457,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1208,7 +1208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 458,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1249,7 +1249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 459,
+      "execution_count": null,
       "metadata": {
         "id": "FJzdAmABsqkz"
       },
@@ -1270,7 +1270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 460,
+      "execution_count": null,
       "metadata": {
         "id": "07qMAs6asqkz"
       },
@@ -1311,7 +1311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 461,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1350,7 +1350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 462,
+      "execution_count": null,
       "metadata": {
         "id": "f9FWqGMlsqk0"
       },
@@ -1381,7 +1381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 463,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1446,7 +1446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 464,
+      "execution_count": null,
       "metadata": {
         "id": "91DPdGxksqk1"
       },
@@ -1469,7 +1469,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 465,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1552,7 +1552,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 466,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1641,7 +1641,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 467,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1718,7 +1718,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 468,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1804,7 +1804,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 469,
+      "execution_count": null,
       "metadata": {
         "id": "ChZNyC4Csqk2"
       },
@@ -1830,7 +1830,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 470,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1870,7 +1870,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 471,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1937,7 +1937,7 @@
         "id": "UT1DOOvgKRcM",
         "outputId": "05cce9b9-f26a-45b4-b3f8-908723f2455a"
       },
-      "execution_count": 472,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1962,7 +1962,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 473,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2004,7 +2004,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 474,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2096,7 +2096,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 475,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2214,7 +2214,7 @@
         "id": "lBkVjIulkodI",
         "outputId": "5d838b55-f205-42c4-ef36-d77bc4bd9c66"
       },
-      "execution_count": 476,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2269,7 +2269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 477,
+      "execution_count": null,
       "metadata": {
         "id": "Q7bkwJL0sqk4"
       },
@@ -2317,7 +2317,7 @@
         "id": "jxF0vZiK4Ew7",
         "outputId": "127dfc49-4273-4cf5-e57c-89455fa59059"
       },
-      "execution_count": 478,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2342,7 +2342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 483,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2426,7 +2426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 480,
+      "execution_count": null,
       "metadata": {
         "id": "EG2Q00cZsqk4"
       },
@@ -2553,7 +2553,7 @@
       },
       "source": [
         "### Reference Trajectory Requirements\n",
-        "For the marker to follow the reference trajectory \\( (x_{mf}(t), y_{mf}(t)) \\), it must satisfy:\n",
+        "For the marker to follow the reference trajectory  $ (x_{mf}(t), y_{mf}(t)) $, it must satisfy:\n",
         "$ \\dot{x}_m = \\dot{x}_{rm} $\n",
         "$ \\dot{y}_m = \\dot{y}_{rm} $\n",
         "\n",
@@ -2578,9 +2578,10 @@
         "Solving the system\n",
         "  $ \\omega_l $ and $ \\omega_r $ as functions of $ x_{rm}(t), y_{rm}(t), \\dot{x}_{rm}(t), \\dot{y}_{rm}(t), $ and $ \\theta(t) $.\n",
         "\n",
-        "$ \\omega_l = \\frac{\\ell}{r} \\left(\\frac{\\dot{x}_{rm} + d \\frac{\\dot{\\theta} \\sin(\\theta)}{r} - \\dot{y}_{rm} \\tan(\\theta)}{2 \\cos(\\theta)}\\right) - \\frac{\\dot{\\theta}}{2} $\n",
-        "\n",
-        "$ \\omega_r = \\frac{\\ell}{r} \\left(\\frac{\\dot{x}_{rm} + d \\frac{\\dot{\\theta} \\sin(\\theta)}{r} + \\dot{y}_{rm} \\tan(\\theta)}{2 \\cos(\\theta)}\\right) + \\frac{\\dot{\\theta}}{2} $\n",
+        "$\\begin{align*}\n",
+        "\\omega_l &= \\frac{1}{r} \\left(\\dot{x}_{rm} \\cos \\theta + \\dot{y}_{rm} \\sin \\theta - \\frac{\\ell}{2d} (\\dot{x}_{rm} \\sin \\theta - \\dot{y}_rm \\cos \\theta) \\right) \\\\\n",
+        "\\omega_r &= \\frac{1}{r} \\left(\\dot{x}_{rm} \\cos \\theta + \\dot{y}_{rm} \\sin \\theta + \\frac{\\ell}{2d} (\\dot{x}_{rm} \\sin \\theta - \\dot{y}_{rm} \\cos \\theta) \\right)\n",
+        "\\end{align*}$\n",
         "\n"
       ]
     },
@@ -2602,7 +2603,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 485,
+      "execution_count": null,
       "metadata": {
         "id": "vJ8mFSaSsqk5"
       },
@@ -2633,7 +2634,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 482,
+      "execution_count": null,
       "metadata": {
         "id": "I6tw_QoFsqk6"
       },
